Final Polish: VK Branding & App Slug Fix

--- a/musicy-mobile/app.json
+++ b/musicy-mobile/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "VK",
-    "slug": "vk-music",
+    "slug": "musicy-mobile",
     "version": "1.0.0",
     "scheme": "musicy-mobile",
     "orientation": "portrait",
