--- a/musicy-frontend/package.json
+++ b/musicy-frontend/package.json
@@ -13,6 +13,7 @@
     "@capacitor/android": "^7.4.4",
     "@capacitor/cli": "^7.4.4",
     "@capacitor/core": "^7.4.4",
+    "@distube/ytdl-core": "^4.16.12",
     "@react-oauth/google": "^0.12.2",
     "axios": "^1.12.2",
     "dayjs": "^1.11.18",
