--- a/musicy-frontend/package.json
+++ b/musicy-frontend/package.json
@@ -16,7 +16,9 @@
     "@distube/ytdl-core": "^4.16.12",
     "@react-oauth/google": "^0.12.2",
     "axios": "^1.12.2",
+    "cors": "^2.8.5",
     "dayjs": "^1.11.18",
+    "express": "^5.2.1",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.555.0",
     "react": "^19.1.1",
